--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -7,25 +7,19 @@ body {
   color: #333;
 }
 
-.hero-unit {
-  margin: 50px auto 0 auto;
-  width: 300px;
-  font-size: 18px;
-  font-weight: 200;
-  line-height: 30px;
-  background-color: #eee;
-  border-radius: 6px;
-  padding: 60px;
-  h1 {
-    font-size: 60px;
-    line-height: 1;
-    letter-spacing: -1px;
+table {
+  border: {
+    collapse: collapse;
+    spacing: 0;
   }
 }
 
-.browserupgrade {
-  margin: 0.2em 0;
-  background: #ccc;
-  color: #000;
-  padding: 0.2em 0;
+table, tr, th, td {
+  margin: 0;
+  padding: 0;
 }
+
+th, td {
+  border: 1px solid #97999B;
+}
+
